# ftl-reasons

./: .gitignore  CHANGELOG.md  FINAL_REPORT.md  IMPLEMENTATION_1_1.md  IMPLEMENTATION_1_2.md  ITERATION_1_UNDERSTANDING.md  PLAN_1.md  README.md  REVIEW_1_1.md  REVIEW_1_2.md  TASK.md  TESTER_1_1.md  beliefs.md  pyproject.toml
.claude/skills/rms/: SKILL.md
entries/iteration-1/: implementer_1.md  implementer_2.md  planner.md  reviewer_1.md  reviewer_2.md  tester_1.md
implementer/: IMPLEMENTATION.md
planner/: PLAN.md
reasons_lib/: __init__.py  api.py  ask.py  check_stale.py  cli.py  compact.py  derive.py  export_markdown.py  import_agent.py  import_beliefs.py  network.py  pg.py  storage.py
reviewer/: REVIEW.md
rms_lib/: api.py  check_stale.py  cli.py  compact.py  export_markdown.py  network.py  storage.py
tester/: REVIEW.md  TEST_REPORT.md  TEST_RESULTS.md  USAGE.md
tests/: conftest.py  test_access_tags.py  test_add_justification.py  test_any_mode.py  test_api.py  test_ask.py  test_backtracking.py  test_check_stale.py  test_check_stale_issue25.py  test_cli.py  test_compact.py  test_dangling_dependents.py  test_dependents_integrity.py  test_derive.py  test_derive_budget.py  test_dialectical.py  test_export_markdown.py  test_import_agent.py  test_import_beliefs.py  test_import_json.py  test_network.py  test_nogood_id.py  test_outlist.py  test_pg.py  test_storage.py  test_summarize.py  test_sync_agent.py
